Refactoring for version 0.12 of the core library